Complete nav bar & hero design

--- a/index.html
+++ b/index.html
@@ -4,18 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ibrahim Itani" />
-    <meta name="description" content="Clone for official BDD website">
+    <meta name="description" content="Clone for official BDD website" />
     <meta
       name="keywords"
       content="Beirut Digital District,Co-working spaces,Private offices,Meeting spaces,Event spaces,Virtual offices,Tech community,Business hub,Lebanon startups, Innovative workspace,Digital innovation,Sustainable design,LEED certification,Collaboration spaces,Tech ecosystem,Business district"
     />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/layout.css" />
     <title>
       BDD | Fully Serviced Offices | Co-working Spaces- Beirut, Lebanon
     </title>
   </head>
   <body>
-
+    <nav>
+      <div class="nav-logo">
+        <a href="/index.html">
+          <img src="/assets/logo.png" alt="BDD Logo" width="94" height="127" />
+        </a>
+      </div>
+      <div class="nav-titles">
+        <ul>
+          <li>
+            <a href="#">Discover BDD</a>
+          </li>
+          <li>
+            <a href="#">Our Products & Services</a>
+          </li>
+          <li><a href="#">BDD Academy</a></li>
+          <li>
+            <a href="/pages/blog.html">Blog</a>
+          </li>
+          <li>
+            <a href="/pages/career.html">Career Portal</a>
+          </li>
+        </ul>
+        <button>Join Us</button>
+      </div>
+    </nav>
+    <div class="hero">
+      <h1>A unique digital cluster</h1>
+      <h1>designed for a community of businesses and innovators</h1>
+    </div>
   </body>
 </html>
