--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/layout.css" />
+    <link rel="stylesheet" href="/css/Base/colors.css" />
     <title>
       BDD | Fully Serviced Offices | Co-working Spaces- Beirut, Lebanon
     </title>
@@ -44,6 +45,91 @@
     <div class="hero">
       <h1>A unique digital cluster</h1>
       <h1>designed for a community of businesses and innovators</h1>
+    </div>
+    <div class="foundations-section bg-primary">
+      <h2>BDD IS BUILT ON FIVE SOLID FOUNDATIONS</h2>
+      <div class="cards-container">
+        <div class="card">
+          <div>
+            <img
+              src="/assets/foundations-icons/community.png"
+              alt="community logo"
+              height="80"
+            />
+          </div>
+          <h2>Community</h2>
+          <p>
+            An environment catering to creative minds, providing the framework
+            for ambitious and sustainable communities. BDD creates a community
+            for collaboration, facilitates the sharing of ideas and connects
+            decision makers with entrepreneurs.
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img
+              src="/assets/foundations-icons/economy.png"
+              alt="economy icon"
+              width="130"
+              height="80"
+            />
+          </div>
+          <h2>Sharing Economy</h2>
+          <p>
+            A business district providing value added services and cutting edge
+            facilities for developing, producing and exchanging innovative tools
+            and applications.
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img
+              src="/assets/foundations-icons/smart-design.png"
+              alt="smart design icon"
+              width="80"
+              height="80"
+            />
+          </div>
+          <h2>Smart Design</h2>
+          <p>
+            A new urban topography that reflects the creative community with
+            innovative and ground breaking architecture seamlessly integrating
+            the latest technological solutions.
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img
+              src="/assets/foundations-icons/sustainability.png"
+              alt="sustainability icon"
+              height="80"
+            />
+          </div>
+          <h2>Sustainability</h2>
+          <p>
+            An urban environment focused on minimizing primary energy
+            consumption and reducing the impact of the built environment on
+            human health and nature, with the aim of achieving LEED silver
+            rating.
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img
+              src="/assets/foundations-icons/well-being.png"
+              alt="well being icon"
+              width="126"
+              height="74"
+            />
+          </div>
+          <h2>Social Well Being</h2>
+          <p>
+            A high tech and high quality environment that allows new ways of
+            working and promotes change for more flexible work practices and
+            lifestyles.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
