--- a/index.html
+++ b/index.html
@@ -131,5 +131,14 @@
         </div>
       </div>
     </div>
+    <div class="explore-section">
+      <h2>Explore the vision</h2>
+      <video
+        src="/assets/vision-section/video.mp4"
+        width="640"
+        height="360"
+        controls
+      ></video>
+    </div>
   </body>
 </html>
