--- a/index.html
+++ b/index.html
@@ -140,5 +140,80 @@
         controls
       ></video>
     </div>
+    <div class="community-section">
+      <h2>join our community</h2>
+      <div>
+        <div>
+          <img
+            src="/assets/Community-section-photos/side-image.png"
+            alt="work office"
+            width="600"
+          />
+        </div>
+        <div class="community-container">
+          <div class="community-card">
+            <div>
+              <h2>private offices</h2>
+              <ul>
+                <li>Ready to move in offices for startups</li>
+                <li>Customizable offices for medium to large companies</li>
+                <li>
+                  Investment opportunities in premium commercial real estate
+                </li>
+              </ul>
+            </div>
+            <button>know more</button>
+          </div>
+          <div class="community-card">
+            <div>
+              <h2>Membership plans to our hot desks</h2>
+              <ul>
+                <li>Day and weekly passes</li>
+                <li>The Smart Starter</li>
+                <li>The Free Bird</li>
+                <li>The Happy Committer</li>
+                <li>The Dedicated</li>
+              </ul>
+            </div>
+            <button>know more</button>
+          </div>
+          <div class="community-card">
+            <div>
+              <h2>meeting & event spaces</h2>
+              <ul>
+                <li>Four fully equipped meeting rooms, up to 12 people</li>
+                <li>One closed event space, up to 250 people</li>
+                <li>3 Training rooms, 30-50 people each</li>
+                <li>Rooftop</li>
+                <li>Garden</li>
+              </ul>
+            </div>
+            <button>know more</button>
+          </div>
+          <div class="community-card">
+            <div>
+              <h2>virtual offices</h2>
+              <ul>
+                <li>Business Address</li>
+                <li>Business Address Plus</li>
+                <li>Yearly Business Address</li>
+              </ul>
+            </div>
+            <button>know more</button>
+          </div>
+        </div>
+      </div>
+      <div class="install-container">
+        <p>Download the BDD app for instant bookings & exclusive discounts</p>
+        <div>
+            <a href="https://apps.apple.com/lb/app/bdd-app/id1238617908">
+                <img src="/assets/footer/app-store.png" alt="app store" height="60" />
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.getray.bdd&hl=en">
+                <img src="/assets/footer/google-play.png" alt="google play" height="60"/>
+            </a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
