complete hub section

--- a/index.html
+++ b/index.html
@@ -215,5 +215,26 @@
         </div>
       </div>
     </div>
+    <div class="hub-section">
+        <h2>bdd is the preferred hub for:</h2>
+        <div>
+            <div>
+                <img src="/assets/hub-section/community.png" alt="community members" width="80">
+                <p>community members</p>
+            </div>
+            <div>
+                <img src="/assets/hub-section/events.png" alt="events" width="80">
+                <p>events per year</p>
+            </div>
+            <div>
+                <img src="/assets/hub-section/organizations.png" alt="ratings"  width="80">
+                <p>startups, smes and support organizations</p>
+            </div>
+            <div>
+                <img src="/assets/hub-section/represented.png" alt="represented" width="80">
+                <p>industries represented</p>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
