Complete trending section

--- a/index.html
+++ b/index.html
@@ -236,5 +236,37 @@
             </div>
         </div>
     </div>
+    <div class="trending-section">
+        <h2>what's trending</h2>
+        <div>
+            <div>
+                <img width="300" src="/assets/trending-section/caroussel-1.jpg" alt="cme">
+                <h1>digital transformations open up new educational opportunities with cme and augmental</h1>
+                <hr>
+                <div>
+                    <p>by BDD</p>
+                    <p>on August 8, 2024</p>
+                </div>
+            </div>
+            <div>
+                <img width="350" src="/assets/trending-section/caroussel-2.jpg" alt="women excelling">
+                <h1>More Women Set To Excel In The Workforce With The Care Arabia Initiative</h1>
+                <hr>
+                <div>
+                    <p>by BDD</p>
+                    <p>on July 24, 2024</p>
+                </div>
+            </div>
+            <div>
+                <img width="300" src="/assets/trending-section/caroussel-3.jpg" alt="man sitting">
+                <h1>How Can Businesses Increase Customer Loyalty? Related Chimes In</h1>
+                <hr>
+                <div>
+                    <p>by BDD</p>
+                    <p>on October 21, 2024</p>
+                </div>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
