add visit button in trending section

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                 </div>
             </div>
         </div>
+        <button>visit our blog</button>
     </div>
   </body>
 </html>
