finish testimonial section

--- a/index.html
+++ b/index.html
@@ -269,5 +269,40 @@
         </div>
         <button>visit our blog</button>
     </div>
+    <div class="testimonials-section">
+        <h2>A few words from our community</h2>
+        <div>
+            <div class="testi-container">
+                <div class="testi-inner">
+                    <div class="front-face">
+                        <img width="300" src="/assets/testimonials-section/testi-1.jpeg" alt="testimonial 1">
+                    </div>
+                    <div class="back-face">
+                        <p>Testimonial: BDD x Uptin</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testi-container">
+                <div class="testi-inner">
+                    <div class="front-face">
+                        <img width="300" src="/assets/testimonials-section/testi-2.jpeg" alt="testimonial 2">
+                    </div>
+                    <div class="back-face">
+                        <p>Testimonial: BDD x Live Love Beirut</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testi-container">
+                <div class="testi-inner">
+                    <div class="front-face">
+                        <img width="300" src="/assets/testimonials-section/testi-3.jpeg" alt="testimonial 3">
+                    </div>
+                    <div class="back-face">
+                        <p>Testimonial: BDD x CME</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
