--- a/index.html
+++ b/index.html
@@ -304,5 +304,60 @@
             </div>
         </div>
     </div>
+    <footer>
+            <div>
+                <h3>sitemap</h3>
+                <div>
+                    <h3>discover BDD</h3>
+                    <ul>
+                        <li>Our Winning Formula</li>
+                        <li>Social Well Being</li>
+                        <li>Our Story</li>
+                        <li>Community Members</li>
+                        <li>Partners</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>our products & services</h3>
+                    <ul>
+                        <li>private offices</li>
+                        <li>Co-Working Spaces</li>
+                        <li>Meeting & Event Spaces</li>
+                        <li>Board Rooms</li>
+                        <li>Virtual Offices</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>other pages</h3>
+                    <ul>
+                        <li>Blog</li>
+                        <li>BDD Academy</li>
+                        <li>Work with us</li>
+                        <li>Get in Touch</li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h3>subscribe to our newsletter</h3>
+                <div>
+                    <p>lorem@example.com</p>
+                    <p>+000 0 00 00 00</p>
+                    <div>
+                        <p>Download our mobile app</p>
+                        <div><img src="/assets/footer/app-store.png" alt="app store"><img src="/assets/footer/google-play.png" alt="google play"></div>
+                    </div>
+                    <p>Terms of Use   Privacy Policy</p>
+                </div>
+            </div>
+            <div>
+                <p>Developed by Ibrahim Itani</p>
+                <div>
+                    <img src="/assets/footer/social-icons/facebook.png" alt="facebook">
+                    <img src="/assets/footer/social-icons/instagram.png" alt="instagram">
+                    <img src="/assets/footer/social-icons/x.png" alt="x">
+                    <img src="/assets/footer/social-icons/linkedin.png" alt="linkedin">
+                </div>
+            </div>
+    </footer>
   </body>
 </html>
