add transitions and parallax effect

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="foundations-section bg-primary">
       <h2>BDD IS BUILT ON FIVE SOLID FOUNDATIONS</h2>
       <div class="cards-container">
-        <div class="card">
+        <div id="community-card" class="card">
           <div>
             <img
               src="/assets/foundations-icons/community.png"
@@ -65,7 +65,7 @@
             decision makers with entrepreneurs.
           </p>
         </div>
-        <div class="card">
+        <div id="economy-card" class="card">
           <div>
             <img
               src="/assets/foundations-icons/economy.png"
@@ -81,7 +81,7 @@
             and applications.
           </p>
         </div>
-        <div class="card">
+        <div id="design-card" class="card">
           <div>
             <img
               src="/assets/foundations-icons/smart-design.png"
@@ -97,7 +97,7 @@
             the latest technological solutions.
           </p>
         </div>
-        <div class="card">
+        <div id="sustainability-card" class="card">
           <div>
             <img
               src="/assets/foundations-icons/sustainability.png"
@@ -113,7 +113,7 @@
             rating.
           </p>
         </div>
-        <div class="card">
+        <div id="social-card" class="card">
           <div>
             <img
               src="/assets/foundations-icons/well-being.png"
@@ -305,59 +305,63 @@
         </div>
     </div>
     <footer>
+      <div class="footer-main-section">
+        <div class="site-map">
+            <h3>sitemap</h3>
             <div>
-                <h3>sitemap</h3>
-                <div>
-                    <h3>discover BDD</h3>
-                    <ul>
-                        <li>Our Winning Formula</li>
-                        <li>Social Well Being</li>
-                        <li>Our Story</li>
-                        <li>Community Members</li>
-                        <li>Partners</li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>our products & services</h3>
-                    <ul>
-                        <li>private offices</li>
-                        <li>Co-Working Spaces</li>
-                        <li>Meeting & Event Spaces</li>
-                        <li>Board Rooms</li>
-                        <li>Virtual Offices</li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>other pages</h3>
-                    <ul>
-                        <li>Blog</li>
-                        <li>BDD Academy</li>
-                        <li>Work with us</li>
-                        <li>Get in Touch</li>
-                    </ul>
-                </div>
+              <div>
+                  <h3>discover BDD</h3>
+                  <ul>
+                      <li>Our Winning Formula</li>
+                      <li>Social Well Being</li>
+                      <li>Our Story</li>
+                      <li>Community Members</li>
+                      <li>Partners</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>our products & services</h3>
+                  <ul>
+                      <li>private offices</li>
+                      <li>Co-Working Spaces</li>
+                      <li>Meeting & Event Spaces</li>
+                      <li>Board Rooms</li>
+                      <li>Virtual Offices</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>other pages</h3>
+                  <ul>
+                      <li>Blog</li>
+                      <li>BDD Academy</li>
+                      <li>Work with us</li>
+                      <li>Get in Touch</li>
+                  </ul>
+              </div>
             </div>
+        </div>
+        <div class="subscribe">
+            <h3>subscribe to our newsletter</h3>
             <div>
-                <h3>subscribe to our newsletter</h3>
-                <div>
-                    <p>lorem@example.com</p>
-                    <p>+000 0 00 00 00</p>
-                    <div>
-                        <p>Download our mobile app</p>
-                        <div><img src="/assets/footer/app-store.png" alt="app store"><img src="/assets/footer/google-play.png" alt="google play"></div>
-                    </div>
-                    <p>Terms of Use   Privacy Policy</p>
+                <p>lorem@example.com</p>
+                <p>+000 0 00 00 00</p>
+                <div class="footer-download">
+                    <p>Download our mobile app</p>
+                    <div><img src="/assets/footer/app-store.png" alt="app store" height="50"><img src="/assets/footer/google-play.png" alt="google play"height="50"></div>
                 </div>
+                <p>Terms of Use   Privacy Policy</p>
             </div>
-            <div>
-                <p>Developed by Ibrahim Itani</p>
-                <div>
-                    <img src="/assets/footer/social-icons/facebook.png" alt="facebook">
-                    <img src="/assets/footer/social-icons/instagram.png" alt="instagram">
-                    <img src="/assets/footer/social-icons/x.png" alt="x">
-                    <img src="/assets/footer/social-icons/linkedin.png" alt="linkedin">
-                </div>
-            </div>
+        </div>
+      </div>
+      <div class="copyright-section">
+          <p>Developed by Ibrahim Itani</p>
+          <div>
+              <img src="/assets/footer/social-icons/facebook.png" alt="facebook" width="20">
+              <img src="/assets/footer/social-icons/instagram.png" alt="instagram" width="20">
+              <img src="/assets/footer/social-icons/x.png" alt="x" width="20">
+              <img src="/assets/footer/social-icons/linkedin.png" alt="linkedin" width="20">
+          </div>
+      </div>
     </footer>
   </body>
 </html>
