separate html tags styles from classes styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/layout.css" />
-    <link rel="stylesheet" href="/css/Base/colors.css" />
+    <link rel="stylesheet" href="./css/Base/style.css">
     <title>
       BDD | Fully Serviced Offices | Co-working Spaces- Beirut, Lebanon
     </title>
@@ -46,7 +46,7 @@
       <h1>A unique digital cluster</h1>
       <h1>designed for a community of businesses and innovators</h1>
     </div>
-    <div class="foundations-section bg-primary">
+    <div class="foundations-section">
       <h2>BDD IS BUILT ON FIVE SOLID FOUNDATIONS</h2>
       <div class="cards-container">
         <div id="community-card" class="card">
