Separate landing page exclusive style to separate file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/Base/style.css">
+    <link rel="stylesheet" href="/css/Pages/landing.css">
     <title>
       BDD | Fully Serviced Offices | Co-working Spaces- Beirut, Lebanon
     </title>
