move a css class from blog style to layout style

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -41,7 +41,7 @@
         <button>Join Us</button>
       </div>
     </nav>
-    <div class="hero"></div>
+    <div class="hero-extra"></div>
     <div class="main-section">
       <h2>What's trending</h2>
       <div class="blog-container">
