complete internship skeleton

--- a/pages/career.html
+++ b/pages/career.html
@@ -69,7 +69,31 @@
         <button class="first-btn">Apply now</button>
         <button>for more opportunities, visit jobs for lebanon</button>
     </div>
-
+    </div>
+    <div class="internship-section">
+        <div ><img src="/assets/career-page/side-image.jpeg" alt="" ></div>
+        <div class="internship-content">
+            <span>internship opportunities</span>
+            <h2>INTERESTED IN AN INTERNSHIP AT THE HEART OF THE STARTUP ECOSYSTEM?</h2>
+            <div>
+                <p>Key benefits of interning at BDD:
+                </p>
+                <ul>
+                    <li>Be part of a diverse community
+                    </li>
+                    <li>Learn and expand knowledge
+                    </li>
+                    <li>Discover the startup world
+                    </li>
+                    <li>Take a step towards full-time employment
+                    </li>
+                    <li>Assess interest and capabilities
+                    </li>
+                </ul>
+                <button>discover internships</button>
+            </div>
+        </div>
+    </div>
     </div>
     <footer>
       <div class="footer-main-section">
