complete testimonials section

--- a/pages/career.html
+++ b/pages/career.html
@@ -95,6 +95,15 @@
         </div>
     </div>
     </div>
+    <div class="testi-section">
+        <div class="quote">
+            <em>
+                BDD is a great community. It really shows the potential that Lebanon has and I'm very grateful to have been a part of this community even if it was for a short while. I have gained in a very short amount of time, a grand amount of technical and non-technical skills. I was exposed to many obstacles and have learned the importance of good teamwork and leadership.
+            </em>
+            <p>- Previous intern at BDD</p>
+        </div>
+        <div class="testi-img"><img src="/assets/career-page/internship-testi.png" alt=""></div>
+    </div>
     <footer>
       <div class="footer-main-section">
         <div class="site-map">
